namespaces/fabrix-system/1e4f29ed-adac-43af-9bf9-f28dfdcaf262.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: sample-rules-for-asa-external-to-vm-subnets
  namespace: fabrix-system
  labels:
    fabrix.io/managed: true
    fabrix.io/datasource-id: 044b1ddf-ce50-4a2c-badc-eaff6750f2db
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        nsx-group: vm-subnet-group
    toPorts:
    - ports:
      - portValue: 22
        protocol: TCP
    toCIDRSet:
    - cidrGroupRef: vm-subnet-group-cidr-vmsubnetgroup
  egressDeny: []
  ingress:
  - {}
  ingressDeny: []
