namespaces/fabrix-system/839f3f0f-f0c1-4807-9eb7-a0e1c6d7fd1e.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: sample-rules-for-asa-dest-will-be-ip-list-not-virtual
  namespace: fabrix-system
  labels:
    fabrix.io/managed: true
    fabrix.io/datasource-id: 044b1ddf-ce50-4a2c-badc-eaff6750f2db
spec:
  endpointSelector: {}
  egress: []
  egressDeny:
  - toEndpoints:
    - matchLabels:
        nsx-group: parent-with-2-children
    toPorts:
    - ports:
      - portValue: 443
        protocol: TCP
    toCIDRSet:
    - cidrGroupRef: parent-with-2-children-cidr-parent-with-2-children
    - cidrGroupRef: local-nets-cidr-local-nets
  ingress: []
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        nsx-group: group-with-a-tag
