namespaces/fabrix-system/bc2b97eb-07a1-4435-91d2-67a959fb58c8.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: sample-rules-for-asa-external-to-vms
  namespace: fabrix-system
  labels:
    fabrix.io/managed: true
    fabrix.io/datasource-id: 044b1ddf-ce50-4a2c-badc-eaff6750f2db
spec:
  endpointSelector: {}
  egress: []
  egressDeny:
  - toEndpoints:
    - matchLabels:
        scope-101: tag-1011
    toCIDRSet:
    - cidrGroupRef: manyvms-cidr-manyvms
  ingress: []
  ingressDeny:
  - {}
