namespaces/fabrix-system/bfa21c61-7f44-4a8c-a3bb-f5a39f2a8530.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: sample-rules-for-asa-external-to-vm-ip
  namespace: fabrix-system
  labels:
    fabrix.io/managed: true
    fabrix.io/datasource-id: 044b1ddf-ce50-4a2c-badc-eaff6750f2db
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        nsx-group: vm-ipp
    toPorts:
    - ports:
      - &o0
        portValue: ''
        protocol: ICMPV6
    toCIDRSet:
    - cidrGroupRef: vm-ipp-cidr-vmip-uid-1
  egressDeny: []
  ingress:
  - toPorts:
    - ports:
      - *o0
  ingressDeny: []
